# Manthan

./: .gitattributes  .gitignore  Makefile  README.md  Structure.txt  config.py  curated_final.json  curation_batch_1.json  curation_batch_intelligent.json  curation_helper.py  discover_species.py  environment.yml  extracted_traits.json  intelligent_app.py  intelligent_discoverer.py  model_server.py  pyproject.toml  requirements.txt  scraper_curator.py  test_ai_import.py  test_day1.py  trait_extractor.py
adapters/: gbif_client.py  gee_connector.py
assets/: district_map.json  landuse_classifier.pth  landuse_map.json  resnet_context_classifier.pth  sample_aoi.geojson  species_database.json
checkpoints/: best_model.pth  checkpoint_epoch_10.pth
manthan_core/: schema.py
outputs/: manthan_analysis_20250724_150053.json  manthan_analysis_20250724_150749.json  manthan_analysis_20250724_150824.json  manthan_analysis_20250724_151519.json  manthan_analysis_20250726_085531.json  manthan_analysis_20250727_155729.json  manthan_analysis_20250730_113621.json  manthan_summary_20250724_145552.csv  manthan_summary_20250724_150749.csv  manthan_summary_20250724_150824.csv  manthan_summary_20250724_162848.csv  manthan_summary_20250727_155729.csv  manthan_summary_20250730_113621.csv
saved_models/: location_context_model.pth  nn_risk_model.pth  rf_suitability_model.joblib  trained_ncf_model.pth  trained_resnet_classifier.pth  trained_unet_segmenter.pth
scripts/: day2_pipeline.py  generate_training_data.py  test_day1.py  train_forecasting_models.py  train_location_model.py  (+1 more)
(+3732 files in other folders)
