[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manthan"
version = "0.1.0"
description = "Regenerative Forest Intelligence Engine"
authors = [
    {name = "Manthan Team", email = "team@manthan.ai"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "earthengine-api",
    "geemap",
    "geopandas",
    "streamlit",
    "streamlit-folium",
    "folium",
    "shapely",
    "rasterio",
    "pandas",
    "numpy",
    "plotly",
    "requests",
    "python-dotenv",
    "pyyaml",
    "pygbif"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/yourusername/manthan"
Repository = "https://github.com/yourusername/manthan"
